# cheap-electricity

./: .gitignore  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
cheap_electricity/: __init__.py  config.py  esios.py  main.py  notifications.py  price.py  price_processing.py
cheap_electricity/data/: prices.json
tarifaluz/: precio_luz.py
tests/: conftest.py  mock_data.py  test_esios_api.py  test_main_flow.py  test_price_processing.py  test_telegram.py
